--- a/foscam-filename.cabal
+++ b/foscam-filename.cabal
@@ -6,7 +6,7 @@ author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ> <dibblego>
 maintainer:         Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ> <dibblego>
 copyright:          Copyright (C) 2015 Tony Morris
 synopsis:           Foscam File format
-category:           Data
+category:           Data, Parsing, File
 description:        
   Foscam File format
 
